--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,55 +7,47 @@ header{
   font-family: verdana;
   font-size: 14px;
   font-weight:bold;
-}
+  align-items: center;
 
-.logo {
+}
+.logo{
   display: flex;
   align-items: center;
   flex-grow: 1;
-  border: 1px solid blue;
-}
-.logo span{
-  color: mediumaquamarine;
-  padding-left: 40px;
-  border: 1px solid mediumaquamarine;
-}
- nav {
-  display: flex;
-  padding-right: 20px;
-  border: 1px solid black;
-  align-items: center;
 }
 
-nav span{
-  border: 1px solid black;
-  padding: 10px 10px;
 }
 /*content*/
-.column {
-display: flex;
-background-color: lightblue;
-height: auto;
-width: 100%;
-justify-content: center;
-margin: 20px auto;
+.container{
+  width:100%;
+  height: auto;
+  border: 1px solid black;
+  background-color: blue;
 
 }
-.column .large{
+.column {
+  width: 100%;
+  height: 600px;
+  border: 1px solid black;
   display: flex;
+  background-color: lightblue;
+  flex-direction:row;
+  justify-content: center;
+  padding-top: 40px;
+}
+.large {
   width: 630px;
-  border: 1px dotted blue;
-  margin: 0 20px;
+  border: 1px solid orange;
 }
-.column .medium {
-  display: flex;
+.large p{
+  border: 1px solid black;
+}
+
+.medium{
   width: 300px;
-  border: 1px dotted green;
-  margin: 0 20px;
+  border: 1px solid blue;
 }
-.column .small{
-  display: flex;
+ .small {
   width: 240px;
-  border: 1px dotted black;
-  margin: 0 20px;
+  border: 1px solid green;
 }
