--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,57 +1,72 @@
+body {
+  margin: 0;
+}
+
 /*header*/
 header{
   display:flex;
   width:100%;
-  height: 85px;
+  height: 80px;
   border-bottom: 1px solid black;
   font-family: verdana;
   font-size: 14px;
   font-weight:bold;
   align-items: center;
-  position:fixed;
+  position: fixed;
+  z-index: 1;
+  background-color: white;
 
 }
 .logo{
   display: flex;
   align-items: center;
   flex-grow: 1;
+
+}
+nav span{
+
+  padding-right: 40px;
+  display: inline-block;
+  width: 30px;
+}
+nav a {
+  color: black;
 }
 
 
 /*content*/
-.container{
+/*.container{
   margin-top: 50px;
   width:100%;
   height: auto;
   border: 1px solid black;
-  background-color: white;
+  background-color: white;*/
 
-}
+
 .column {
-  margin-top: 50px;
   width: 100%;
   height: auto;
-  border: 1px solid black;
+
   display: flex;
-  background-color: lightblue;
+
   flex-direction:row;
   justify-content: center;
-  padding-top: 40px;
+  padding-top: 150px;
 }
 .large {
   width: 630px;
-  border: 1px solid orange;
+
   margin-right: 20px;
 }
 
 .medium{
   width: 300px;
-  border: 1px solid blue;
+
   margin-right:20px;
 }
  .small {
   width: 240px;
-  border: 1px solid green;
+
 }
 .column p,h3{
 font-family: Georgia;
@@ -60,7 +75,7 @@ color: black;
 }
 /*Editing Large Columns */
 .box1, .box2, .box3{
-  border: 1px solid black;
+
 }
 .box1{
   background-color: white;
@@ -71,12 +86,12 @@ color: black;
 }
 }
 .box2{
-  background-color: floralwhite;
+
 
 }
 .box3{
 
-  background-color: purple;
+
 }
 .orca, .breakfast{
   padding: 15px 15px;
