--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+
 }
 
 /*header*/
@@ -43,11 +44,9 @@ nav a {
   border: 1px solid black;
   background-color: white;*/
 
-
 .column {
   width: 100%;
   height: auto;
-
   display: flex;
   flex-direction:row;
   justify-content: center;
@@ -55,9 +54,9 @@ nav a {
 }
 .large {
   width: 630px;
-
   margin-right: 20px;
-  flex-shrink: 0;
+
+  overflow:auto;
 
 }
 
@@ -65,13 +64,13 @@ nav a {
   width: 300px;
 
   margin-right:20px;
-  flex-shrink: 0;
+
 
 }
  .small {
   width: 240px;
 
-  flex-shrink: 0;
+
 
 }
 .column p,h3{
